--- a/om_mig.html
+++ b/om_mig.html
@@ -27,7 +27,36 @@
     <main id="om_mig">
       <h1>Om mig</h1>
       <section id="first_section">
-        <div class="selvportraet"></div>
+        <div class="om_img">
+          <img src="billeder/selvportraet.webp" alt="selvportraet" />
+        </div>
+        <div class="tekst_box">
+          <div class="box_1"></div>
+          <div class="tekst_1">
+            <p>
+              Mit fulde navn er Freja Hee Eun Smith-Pedersen, og jeg er 22 år
+              gammel. Jeg er bosat på Vestamager med min kæreste og lille hund
+              Cleo. Jeg blev adopteret fra Syd Korea da jeg var 4 måneder
+              gammel, og er opvokset på Amager.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section id="second_section">
+        <div class="om_img om_img2">
+          <img src="billeder/cleo.webp" alt="cleo" />
+        </div>
+        <div class="tekst_boks">
+          <div class="box_2"></div>
+          <div class="tekst_2">
+            <p>
+              Jeg startede på Multimediedesigner uddannelsen fordi jeg elsker at
+              være kreativ, specielt inde for digitalt design og medier. Min
+              stil er glad og farverig. Mine designs kan godt være lidt skøre
+              men tilgengæld er de ikke kedelige.
+            </p>
+          </div>
+        </div>
       </section>
     </main>
     <script src="javascript.js"></script>
