stavefejl om mig

--- a/om_mig.html
+++ b/om_mig.html
@@ -35,7 +35,7 @@
           <p>
             Mit fulde navn er Freja Hee Eun Smith-Pedersen, og jeg er 22 år
             gammel. Jeg er bosat på Vestamager med min kæreste og lille hund
-            Cleo. Jeg blev adopteret fra Syd Korea da jeg var 4 måneder gammel,
+            Cleo. Jeg blev adopteret fra Sydkorea da jeg var 4 måneder gammel,
             og er opvokset på Amager.
           </p>
         </div>
