final touch på om mig

--- a/om_mig.html
+++ b/om_mig.html
@@ -50,8 +50,10 @@
           <p>
             Jeg startede på Multimediedesigner uddannelsen fordi jeg elsker at
             være kreativ, specielt inde for digitalt design og medier. Min stil
-            er glad og farverig. Mine designs kan godt være lidt skøre men
-            tilgengæld er de ikke kedelige.
+            er glad og farverig, da jeg er meget inspireret af bl.a. den
+            japanske stil "kawaii" som betyder nuttet. Desuden bruger jeg meget
+            tid på internettet og på at spille computerspil som også inspirerer
+            mig.
           </p>
         </div>
       </section>
