--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,13 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <section></section>
+    <main id="portfolio">
+      <section id="first_section">
+        <h1>Portfolio</h1>
+      </section>
+      <section id="second_section"></section>
     </main>
     <script src="javascript.js"></script>
   </body>
-  <footer id="author"><h3>Freja Hee Eun Smith-Pedersen</h3></footer>
+  <footer></footer>
 </html>
