--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,232 @@
       <section id="first_section">
         <h1>Portfolio</h1>
       </section>
-      <section id="second_section"></section>
+      <section id="second_section">
+        <h2>Tema 2 - Grundlæggende HTML</h2>
+        <h3>02.04.02 responsive_site_v2</h3>
+        <div class="tekst_col">
+          <p>
+            Under temaet grundlæggende HTML var målet at man skulle producere en
+            simpel responsiv hjemmeside. Jeg lærte om basis designprincipper som
+            gestaltlovene, farveharmonier og rule of thirds. Da vi skulle lave
+            vores splashbillede til vores site anvendte jeg rule of thirds til
+            kompositionen af mit billede og valgte farver der harmonerede, da
+            det bedst stemte overens med min stil for mit site. Jeg lærte også
+            om designprocess i form af moodboards, wireframes og styletiles.
+            Link til
+            <a
+              href="http://pandapoob.com/kea/02_web/04_responsive/responsive_site_v2/styletile.html"
+              >Styletile</a
+            >
+          </p>
+        </div>
+        <div class="img_col">
+          <h3>Mit splashbillede</h3>
+          <img src="billeder/responsive_site_splash.webp" alt="splashbillede" />
+        </div>
+        <div class="tekst_col">
+          <p>
+            Jeg stiftede bekendskab til basis HTML struktur i form af
+            layoutdiagrammer og jeg lærte om css i forhold til styling og grids.
+            Den viden brugte jeg til at designe mit site. Desuden lærte jeg at
+            bruge media queries sådan at mit site blev resposivt. Jeg satte alle
+            mine grids ind i et media querry så hvis siden blev større end 780px
+            vil mine sections ligge i grids i stedet for at ligge i en lodret
+            række, som det gør i mobil version.
+          </p>
+        </div>
+        <div class="img_col">
+          <h3>Eksempel på et af mine grids</h3>
+          <img src="billeder/responsive_site.webp" alt="screenshot" />
+        </div>
+        <a
+          href="http://pandapoob.com/kea/02_web/04_responsive/responsive_site_v2/"
+          >Se responsive_site_v2</a
+        >
+      </section>
+      <section id="third_section">
+        <h2>Tema 3 - Grundlæggende UX</h2>
+        <h3>03.03.06 Prototype 2</h3>
+        <div class="tekst_col">
+          <p>
+            Under temaet grundlæggende UX skulle vi gennem research, analyse,
+            indholdsproduktion og prototyping skabe vores egen T-shirt shop. Jeg
+            fik kendskab til forskellige research metoder og gennem
+            desk-research fandt jeg ud af at hvis man vil sælge T-shirts er det
+            vigtigt at vælge en unik niche da markedet i forvejen er "mættet" af
+            T-shirt salg. Jeg valgte derfor at min T-shirt shop skulle være
+            inspireret af J-Fashion og K-Fashion, altså japansk og koreansk
+            tøjstil.
+          </p>
+        </div>
+        <div class="img_col">
+          <h3>Mit moodboard</h3>
+          <img src="billeder/moodboard.webp" alt="moodboard" />
+        </div>
+        <div class="tekst_col">
+          <p>
+            Under min interview research, hvor jeg interviewede en der regulært
+            shopper J- og K-Fashion, fandt jeg ud af at det at kunne skelne
+            mellem stil på en shopping site var vigtigt. Derfor tilføjede jeg på
+            forsiden en "shop cute" og "shop cool" knap. I min reserach fandt
+            jeg også ud af at fordi den stil jeg valgte ikke var specielt
+            udbredt i EU, handlede min målgruppe uden for EU, og valgte gerne
+            mindre troværdige sider som "Wish" fordi det var billigt ift. mere
+            "officielle sider", som til gengæld var ekstremt dyre. Da min
+            målgruppe havde tendens til at handle på mindre troværdige sider
+            fortrak de at handle med Paypal, derfor tilføjede jeg Paypal som
+            betalingsmulighed.
+          </p>
+        </div>
+        <div class="img_col">
+          <h3>solution sketch</h3>
+          <img src="billeder/solution_sketch.webp" alt="solution sketch" />
+        </div>
+        <a
+          href="https://xd.adobe.com/view/cb758283-266a-45de-8a0f-98a697e47344-9e26/?fullscreen&hints=off"
+          >Se min Prototype</a
+        >
+        <h3>03.03.02 Pitch</h3>
+        <div class="tekst_col">
+          <p>
+            Da jeg skulle pitche, samlede jeg alt det vigtige research jeg havde
+            lavet for at kunne præsentere min T-shirt shop og mit koncept. Jeg
+            lagde vægt på bl.a. min tagline, da jeg i min interview research
+            havde fundet ud af at det at kunne udtrykke sig gennem fashion var
+            vigtigt for min målgruppe, derfor havde jeg min tagline "Be You, Be
+            Cute". Jeg havde i første omgang misforstået pitchen og lavet den i
+            adobe xd men fik lavet den om til et google slide i stedet. Jeg fik
+            god feedback fra min pitch og det gik op for mig at min stærkeste
+            USP var at jeg var first mover. Desuden gik det også op for mig at
+            mit site manglede kontraster.
+          </p>
+        </div>
+        <a
+          href="https://docs.google.com/presentation/d/1gnfJJNOYxo-5ZpJNBFt1s7RDK8G2Yjvmi3Z-nrJCdp4/edit?usp=sharing"
+          >Se min Pitch</a
+        >
+      </section>
+      <section id="fourth_section">
+        <h2>Tema 4 - Animation:</h2>
+        <h3>Website med spil og dokumentation</h3>
+        <div class="tekst_col">
+          <p>
+            Under temaet Animation skulle vi gennem designe og kode vores eget
+            spil. Vi skulle designe vores egne figurelementer i Adobe
+            Illustrator. Da jeg var inspireret af Whac-A-Mole valgte jeg stilen
+            pixel-art. Alle mine elementer som figurer og bagrunde er derfor
+            lavet med rectangle tool. Jeg placerede simpelthen en masse
+            firkanter og når jeg havde min ønskede figur så mergede jeg dem. På
+            samme måde lagde jeg detaljer som skygger.
+          </p>
+        </div>
+        <div class="img_col">
+          <h3>min process i Adobe illustrator</h3>
+          <img src="billeder/adobe_illustrator.webp" alt="adobe illustrator" />
+        </div>
+        <div class="tekst_col">
+          <p>
+            Da jeg valgte at lave et whac-a-mole type spil og mine
+            figurelementer skulle komme op af huller i en maskine, valgte jeg at
+            dele mine baggrund op i tre forgrunde og jeg gav dem et z-index.
+            Desuden gav jeg z-index til mine positions sådan så når mine
+            elementer fik en random position ville de få den positions z-index
+            og komme op over forgrunden.
+          </p>
+        </div>
+        <div class="img_col">
+          <img src="billeder/z_index.webp" alt="forgrunde" />
+        </div>
+        <div class="tekst_col">
+          <p>
+            Jeg lærte at lave css animationer og tilføje dem til mine elementer
+            via Javascript. Mine elementer kunne nu komme op og ned af fra mine
+            positions. Dog skulle mine figurelementer ikke have den samme random
+            position, da det ville resultere i at flere elementer ville komme op
+            af samme hul. Derfor lavede jeg en array til mine positions, da en
+            array er en variable der kan "holde" alle mine positions. Derefter
+            tilføjede jeg min array til min random position. Jeg brugte også
+            JavaScript til at vise og skjule de skærme der skulle være fremme.
+          </p>
+        </div>
+        <div class="img_col">
+          <h3>screenshots fra mit javascript</h3>
+          <img src="billeder/posarray.webp" alt="javascript" />
+        </div>
+        <a href="http://pandapoob.com/kea/04_animation/spil/">Se mit spil</a>
+      </section>
+      <section id="fifth_section">
+        <h2>Tema 5 - Grundlæggende indhold</h2>
+        <h3>05.01.01 Pilotprojekt</h3>
+        <div class="tekst_col">
+          <p>
+            I pilotprojektet skulle vi lave et website med video og billder, der
+            beskrev en selvvalgt persons passion. Vores gruppe valgte et
+            gruppemedlem hvis passion var løb. Vi mødtes for at filme og tage
+            billeder og derefter skulle vi individuelt redigere vores egen video
+            i Adobe Premiere Pro. I interviewet fortæller vores gruppemedlem at
+            hun får ro i sindet af løb derfor valgte jeg at afspejle det i
+            videoen med bløde overgange og rolig baggrundsmusik.
+          </p>
+        </div>
+        <div class="img_col">
+          <h3>Mit baggrundsbillede</h3>
+          <img src="billeder/baggrundsbillede.webp" alt="splashbillede loeb" />
+        </div>
+        <a href="http://pandapoob.com/kea/05_indhold/01_pilot/05_01_01/"
+          >Se mit Pilotprojekt</a
+        >
+        <h2>05.02.01 Redesign og temadokumentation</h2>
+        <div class="tekst_col">
+          <p>
+            Under denne opgave skulle vi redesigne en selvvalgt virksomheds
+            hjemmeside. Vi skulle både kode website og stå for
+            indholdsproduktionen som tekst, fotos og video. Vi kom i kontakt med
+            ejerne af Siciliansk Is, og de gik med til at vi kunne redesigne
+            deres website. De havde i forvejen logo og farvepalette, da en af
+            ejerne selv var designer. Vi brugte trelloboard til at holde
+            overblik over vores arbejdsopgaver. Gennem vores research fandt vi
+            ud at deres målgruppe primært var lokalområdet (børnefamilier) og
+            turister.
+          </p>
+        </div>
+        <div class="img_col">
+          <img src="billeder/is.webp" alt="is" />
+        </div>
+        <div class="tekst_col">
+          <p>
+            Vi lavede en BERT test for at pege os i den rigtige retning. Der var
+            der ikke stor forskel mellem vores forventninger og brugeres
+            opfattelse af det eksisterende. Dog var der alligvel nogle ting der
+            kunne fokuseres på som f.eks. at vi gerne ville have siden over mod
+            noget mere moderne hvor brugeres opfattelse lå mere i midten af
+            moderne/retro. Desuden ville vi også gerne have den en smule mere
+            detaljeret. Deres hjemmeside havde næsten ingen billeder men brugte
+            embedded instagram posts. Derfor var det vigtigt for os at få
+            produceret noget godt indhold som f.eks. fotos. Vi researchede og
+            kom frem til at hvis vi tilføjede en kort stemningsvideo på forsiden
+            som baggrund ville det gøre hjemmesiden mere moderne. På "om os"
+            siden skulle der være en lidt længere interview video hvor man kunne
+            høre deres unikke historie.
+          </p>
+        </div>
+        <div class="img_col">
+          <h3>Vores BERT test</h3>
+          <img src="billeder/bert-test.webp" alt="bert-test" />
+        </div>
+        <a href="https://peaceful-clarke-7f83cd.netlify.app/index.html"
+          >Se vores redesign</a
+        >
+        <br />
+        <a href="https://github.com/Thea5897/SicilianskIs"
+          >Se vores Github repository</a
+        >
+        <br />
+        <a
+          href="https://docs.google.com/document/d/1FRPtAsqYbtHXegpziWgZVmLZcAO9FTn80IYhDo841vE/edit"
+          >Se vores temadokumentation</a
+        >
+      </section>
     </main>
     <script src="javascript.js"></script>
   </body>
