portfolio mobile done

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Bebas+Neue&family=Odibee+Sans&family=Yanone+Kaffeesatz&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -31,40 +35,51 @@
       <section id="second_section">
         <h2>Tema 2 - Grundlæggende HTML</h2>
         <h3>02.04.02 responsive_site_v2</h3>
-        <div class="tekst_col">
-          <p>
-            Under temaet grundlæggende HTML var målet at man skulle producere en
-            simpel responsiv hjemmeside. Jeg lærte om basis designprincipper som
-            gestaltlovene, farveharmonier og rule of thirds. Da vi skulle lave
-            vores splashbillede til vores site anvendte jeg rule of thirds til
-            kompositionen af mit billede og valgte farver der harmonerede, da
-            det bedst stemte overens med min stil for mit site. Jeg lærte også
-            om designprocess i form af moodboards, wireframes og styletiles.
-            Link til
-            <a
-              href="http://pandapoob.com/kea/02_web/04_responsive/responsive_site_v2/styletile.html"
-              >Styletile</a
-            >
-          </p>
+        <div class="col">
+          <div class="tekst_col">
+            <p>
+              Under temaet grundlæggende HTML var målet at man skulle producere
+              en simpel responsiv hjemmeside. Jeg lærte om basis
+              designprincipper som gestaltlovene, farveharmonier og rule of
+              thirds. Da vi skulle lave vores splashbillede til vores site
+              anvendte jeg rule of thirds til kompositionen af mit billede og
+              valgte farver der harmonerede, da det bedst stemte overens med min
+              stil for mit site. Jeg lærte også om designprocess i form af
+              moodboards, wireframes og styletiles. Link til
+              <a
+                href="http://pandapoob.com/kea/02_web/04_responsive/responsive_site_v2/styletile.html"
+                >Styletile</a
+              >
+            </p>
+          </div>
+          <div class="img_col">
+            <h4>Mit splashbillede</h4>
+            <div class="img_style">
+              <img
+                src="billeder/responsive_site_splash.webp"
+                alt="splashbillede"
+              />
+            </div>
+          </div>
         </div>
-        <div class="img_col">
-          <h3>Mit splashbillede</h3>
-          <img src="billeder/responsive_site_splash.webp" alt="splashbillede" />
-        </div>
-        <div class="tekst_col">
-          <p>
-            Jeg stiftede bekendskab til basis HTML struktur i form af
-            layoutdiagrammer og jeg lærte om css i forhold til styling og grids.
-            Den viden brugte jeg til at designe mit site. Desuden lærte jeg at
-            bruge media queries sådan at mit site blev resposivt. Jeg satte alle
-            mine grids ind i et media querry så hvis siden blev større end 780px
-            vil mine sections ligge i grids i stedet for at ligge i en lodret
-            række, som det gør i mobil version.
-          </p>
-        </div>
-        <div class="img_col">
-          <h3>Eksempel på et af mine grids</h3>
-          <img src="billeder/responsive_site.webp" alt="screenshot" />
+        <div class="col_2">
+          <div class="tekst_col">
+            <p>
+              Jeg stiftede bekendskab til basis HTML struktur i form af
+              layoutdiagrammer og jeg lærte om css i forhold til styling og
+              grids. Den viden brugte jeg til at designe mit site. Desuden lærte
+              jeg at bruge media queries sådan at mit site blev resposivt. Jeg
+              satte alle mine grids ind i et media querry så hvis siden blev
+              større end 780px vil mine sections ligge i grids i stedet for at
+              ligge i en lodret række, som det gør i mobil version.
+            </p>
+          </div>
+          <div class="img_col">
+            <h4>Eksempel på et af mine grids</h4>
+            <div class="img_style">
+              <img src="billeder/responsive_site.webp" alt="screenshot" />
+            </div>
+          </div>
         </div>
         <a
           href="http://pandapoob.com/kea/02_web/04_responsive/responsive_site_v2/"
@@ -87,8 +102,10 @@
           </p>
         </div>
         <div class="img_col">
-          <h3>Mit moodboard</h3>
-          <img src="billeder/moodboard.webp" alt="moodboard" />
+          <h4>Mit moodboard</h4>
+          <div class="img_style">
+            <img src="billeder/moodboard.webp" alt="moodboard" />
+          </div>
         </div>
         <div class="tekst_col">
           <p>
@@ -106,8 +123,10 @@
           </p>
         </div>
         <div class="img_col">
-          <h3>solution sketch</h3>
-          <img src="billeder/solution_sketch.webp" alt="solution sketch" />
+          <h4>Solution sketch</h4>
+          <div class="img_style">
+            <img src="billeder/solution_sketch.webp" alt="solution sketch" />
+          </div>
         </div>
         <a
           href="https://xd.adobe.com/view/cb758283-266a-45de-8a0f-98a697e47344-9e26/?fullscreen&hints=off"
@@ -148,8 +167,13 @@
           </p>
         </div>
         <div class="img_col">
-          <h3>min process i Adobe illustrator</h3>
-          <img src="billeder/adobe_illustrator.webp" alt="adobe illustrator" />
+          <h4>Min process i Adobe illustrator</h4>
+          <div class="img_style">
+            <img
+              src="billeder/adobe_illustrator.webp"
+              alt="adobe illustrator"
+            />
+          </div>
         </div>
         <div class="tekst_col">
           <p>
@@ -162,7 +186,9 @@
           </p>
         </div>
         <div class="img_col">
-          <img src="billeder/z_index.webp" alt="forgrunde" />
+          <div class="img_style">
+            <img src="billeder/z_index.webp" alt="forgrunde" />
+          </div>
         </div>
         <div class="tekst_col">
           <p>
@@ -177,8 +203,10 @@
           </p>
         </div>
         <div class="img_col">
-          <h3>screenshots fra mit javascript</h3>
-          <img src="billeder/posarray.webp" alt="javascript" />
+          <h4>screenshots fra mit javascript</h4>
+          <div class="img_style">
+            <img src="billeder/posarray.webp" alt="javascript" />
+          </div>
         </div>
         <a href="http://pandapoob.com/kea/04_animation/spil/">Se mit spil</a>
       </section>
@@ -197,8 +225,13 @@
           </p>
         </div>
         <div class="img_col">
-          <h3>Mit baggrundsbillede</h3>
-          <img src="billeder/baggrundsbillede.webp" alt="splashbillede loeb" />
+          <h4>Mit baggrundsbillede</h4>
+          <div class="img_style">
+            <img
+              src="billeder/baggrundsbillede.webp"
+              alt="splashbillede loeb"
+            />
+          </div>
         </div>
         <a href="http://pandapoob.com/kea/05_indhold/01_pilot/05_01_01/"
           >Se mit Pilotprojekt</a
@@ -218,7 +251,9 @@
           </p>
         </div>
         <div class="img_col">
-          <img src="billeder/is.webp" alt="is" />
+          <div class="img_style">
+            <img src="billeder/is.webp" alt="is" />
+          </div>
         </div>
         <div class="tekst_col">
           <p>
@@ -238,8 +273,10 @@
           </p>
         </div>
         <div class="img_col">
-          <h3>Vores BERT test</h3>
-          <img src="billeder/bert-test.webp" alt="bert-test" />
+          <h4>Vores BERT test</h4>
+          <div class="img_style">
+            <img src="billeder/bert-test.webp" alt="bert-test" />
+          </div>
         </div>
         <a href="https://peaceful-clarke-7f83cd.netlify.app/index.html"
           >Se vores redesign</a
