desktop portfolio finishing touch

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,8 @@
               anvendte jeg rule of thirds til kompositionen af mit billede og
               valgte farver der harmonerede, da det bedst stemte overens med min
               stil for mit site. Jeg lærte også om designprocess i form af
-              moodboards, wireframes og styletiles. Link til
+              moodboards, wireframes og styletiles.<br />
+              Link til
               <a
                 href="http://pandapoob.com/kea/02_web/04_responsive/responsive_site_v2/styletile.html"
                 >Styletile</a
@@ -273,7 +274,7 @@
               <img src="billeder/is.webp" alt="is" />
             </div>
           </div>
-          <div class="tekst_col">
+          <div class="tekst_col_2">
             <p>
               Under denne opgave skulle vi redesigne en selvvalgt virksomheds
               hjemmeside. Vi skulle både kode website og stå for
@@ -288,7 +289,7 @@
           </div>
         </div>
         <div class="col_4">
-          <div class="tekst_col_2">
+          <div class="tekst_col_3">
             <p>
               Vi lavede en BERT test for at pege os i den rigtige retning. Der
               var der ikke stor forskel mellem vores forventninger og brugeres
