--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
               grids. Den viden brugte jeg til at designe mit site. Desuden lærte
               jeg at bruge media queries sådan at mit site blev resposivt. Jeg
               satte alle mine grids ind i et media querry så hvis siden blev
-              større end 780px vil mine sections ligge i grids i stedet for at
+              større end 780px ville mine sections ligge i grids i stedet for at
               ligge i en lodret række, som det gør i mobil version.
             </p>
           </div>
@@ -130,12 +130,14 @@
               skelne mellem stil på en shopping site var vigtigt. Derfor
               tilføjede jeg på forsiden en "shop cute" og "shop cool" knap. I
               min reserach fandt jeg også ud af at fordi den stil jeg valgte
-              ikke var specielt udbredt i EU, handlede min målgruppe uden for
-              EU, og valgte gerne mindre troværdige sider som "Wish" fordi det
-              var billigt ift. mere "officielle sider", som til gengæld var
+              ikke var specielt udbredt i EU, handlede min målgruppe ofte uden
+              for EU. De valgte gerne mindre troværdige sider som "Wish" fordi
+              det var billigt ift. mere "officielle sider", som til gengæld var
               ekstremt dyre. Da min målgruppe havde tendens til at handle på
-              mindre troværdige sider fortrak de at handle med Paypal, derfor
-              tilføjede jeg Paypal som betalingsmulighed.
+              mindre troværdige sider fortrak de at betale med Paypal, da Paypal
+              sikrer at sælger aldrig er direkte i kontakt med dine
+              betalingsoplysninger. Derfor tilføjede jeg Paypal som
+              betalingsmulighed i min prototype.
             </p>
           </div>
         </div>
@@ -174,13 +176,14 @@
         <div class="col">
           <div class="tekst_col">
             <p>
-              Under temaet Animation skulle vi gennem designe og kode vores eget
-              spil. Vi skulle designe vores egne figurelementer i Adobe
-              Illustrator. Da jeg var inspireret af Whac-A-Mole valgte jeg
-              stilen pixel-art. Alle mine elementer som figurer og bagrunde er
-              derfor lavet med rectangle tool. Jeg placerede simpelthen en masse
-              firkanter og når jeg havde min ønskede figur så mergede jeg dem.
-              På samme måde lagde jeg detaljer som skygger.
+              Under temaet Animation skulle vi designe og kode vores eget spil.
+              Vi skulle designe vores egne figurelementer og baggrunde i Adobe
+              Illustrator. Da jeg var inspireret af det gamle japanske arkade
+              spil Whac-A-Mole valgte jeg stilen pixel-art. Alle mine elementer
+              som figurer og baggrunde er derfor lavet med rectangle tool. Jeg
+              placerede simpelthen en masse firkanter og når jeg havde min
+              ønskede figur så mergede jeg dem. På samme måde lagde jeg detaljer
+              som skygger.
             </p>
           </div>
           <div class="img_col">
@@ -201,12 +204,14 @@
           </div>
           <div class="tekst_col">
             <p>
-              Da jeg valgte at lave et whac-a-mole type spil og mine
+              Da jeg valgte at lave et Whac-A-Mole type spil og mine
               figurelementer skulle komme op af huller i en maskine, valgte jeg
               at dele mine baggrund op i tre forgrunde og jeg gav dem et
               z-index. Desuden gav jeg z-index til mine positions sådan så når
               mine elementer fik en random position ville de få den positions
-              z-index og komme op over forgrunden.
+              z-index og komme op over forgrunden. Det var en langtrukken
+              process men i sidste ende den bedste løsning for at få det bedste
+              resultat.
             </p>
           </div>
         </div>
@@ -242,7 +247,7 @@
         <div class="col">
           <div class="tekst_col">
             <p>
-              I pilotprojektet skulle vi lave et website med video og billder,
+              I pilotprojektet skulle vi lave et website med video og billeder,
               der beskrev en selvvalgt persons passion. Vores gruppe valgte et
               gruppemedlem hvis passion var løb. Vi mødtes for at filme og tage
               billeder og derefter skulle vi individuelt redigere vores egen
