--- a/portfolio.html
+++ b/portfolio.html
@@ -317,28 +317,30 @@
               <img src="billeder/bert-test.webp" alt="bert-test" />
             </div>
           </div>
-        </div>
-        <div id="links">
-          <div class="link">
-            <a href="https://peaceful-clarke-7f83cd.netlify.app/index.html"
-              >Se vores redesign</a
-            >
-          </div>
-          <div class="link">
-            <a href="https://github.com/Thea5897/SicilianskIs"
-              >Se vores Github repository</a
-            >
-          </div>
-          <div class="link">
-            <a
-              href="https://docs.google.com/document/d/1FRPtAsqYbtHXegpziWgZVmLZcAO9FTn80IYhDo841vE/edit"
-              >Se vores temadokumentation</a
-            >
+          <div id="links">
+            <div class="link">
+              <a href="https://peaceful-clarke-7f83cd.netlify.app/index.html"
+                >Se vores redesign</a
+              >
+            </div>
+            <div class="link">
+              <a href="https://github.com/Thea5897/SicilianskIs"
+                >Se vores Github repository</a
+              >
+            </div>
+            <div class="link">
+              <a
+                href="https://docs.google.com/document/d/1FRPtAsqYbtHXegpziWgZVmLZcAO9FTn80IYhDo841vE/edit"
+                >Se vores temadokumentation</a
+              >
+            </div>
           </div>
         </div>
       </section>
     </main>
     <script src="javascript.js"></script>
   </body>
-  <footer></footer>
+  <footer>
+    <p>Freja Hee Eun Smith-Pedersen - KEA MMD - 1. SEM eksamen</p>
+  </footer>
 </html>
