--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <main id="forside">
       <section>
         <h1>Portfolio</h1>
+        <h3>Freja Hee Eun Smith-Pedersen</h3>
       </section>
     </main>
     <script src="javascript.js"></script>
   </body>
-  <footer id="author"><h3>Freja Hee Eun Smith-Pedersen</h3></footer>
 </html>
