--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
